--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
+    "google-distance-matrix": "^1.0.0",
     "mongoose": "^4.12.1"
   }
 }
