--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.1",
     "express-session": "^1.15.6",
     "google-distance-matrix": "^1.0.0",
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "nodemailer": "^4.3.1"
   }
 }
